fix responsiveness for tags on mobile

--- a/src/app/components/recipe/recipe.component.sass
+++ b/src/app/components/recipe/recipe.component.sass
@@ -26,6 +26,7 @@ strong
     margin-top: rem(20)
 .container__tags
     display: flex
+    flex-wrap: wrap
     margin-top: rem(20)
 .container__text-tags
     @include flex-space-between
