--- a/src/app/components/tags/temperature/temperature.component.sass
+++ b/src/app/components/tags/temperature/temperature.component.sass
@@ -6,9 +6,10 @@
     background-color: $lmfy-lightorange
     border: 2px solid $lmfy-darkorange
     border-radius: 6px
-    width: 70px
-    height: 70px
+    width: 90px
+    height: 90px
     margin-right: rem(14)
+    margin-bottom: rem(14)
 .tag-icon
     width: 40px
     display: flex
